@@ -1,6 +1,11 @@
 Overview of changes from 1.4.0-beta to 1.4.0
 ==
 * Fixed
+  - libuim
+    - Fix crash on im-acquire-text when acquired text is NULL
+    - Fix unimplemented return value of uim_input_string()
+    - Fix uneffected --disable-nls
+
   - uim Scheme library
     - Fix lacking heap preallocation for heavy job. This makes uim-pref startup
       faster
